--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    
+    <link rel="icon" href="/public/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
